--- a/css/styles.css
+++ b/css/styles.css
@@ -220,9 +220,107 @@ button img {
     color: #92ba22;
 }
 
+/**
+ * hamburger button
+ */
+.cmn-toggle-switch {
+    display: block;
+    position: relative;
+    overflow: hidden;
+    margin: 10px 0 5px;
+    padding: 0;
+    width: 31px;
+    height: 31px;
+    border: none;
+    border-radius: 3px;
+    font-size: 0;
+}
+
+.cmn-toggle-switch:focus {
+    outline: none;
+}
+
+.cmn-toggle-switch span {
+    display: block;
+    position: absolute;
+    top: 15px;
+    left: 6px;
+    right: 6px;
+    height: 2px;
+    background: white;
+}
+
+.cmn-toggle-switch span::before,
+.cmn-toggle-switch span::after {
+    position: absolute;
+    display: block;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    content: "";
+}
+
+.cmn-toggle-switch span::before {
+    top: -6px;
+}
+
+.cmn-toggle-switch span::after {
+    bottom: -6px;
+}
+
+/**
+ * переключение
+ */
+.cmn-toggle-switch__htx {
+    background-color: #f45400;
+}
+
+.cmn-toggle-switch__htx span::before,
+.cmn-toggle-switch__htx span::after {
+    -webkit-transition-duration: 0.3s, 0.3s;
+    transition-duration: 0.3s, 0.3s;
+}
+
+.cmn-toggle-switch__htx span::before {
+    -webkit-transition-property: top, -webkit-transform;
+    transition-property: top, transform;
+}
+
+.cmn-toggle-switch__htx span::after {
+    -webkit-transition-property: bottom, -webkit-transform;
+    transition-property: bottom, transform;
+}
+
+/* active state*/
+.cmn-toggle-switch__htx.active {
+    background-color: #de4c00;
+}
+
+.cmn-toggle-switch__htx.active span {
+    background: none;
+}
+
+.cmn-toggle-switch__htx.active span::before {
+    top: 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.cmn-toggle-switch__htx.active span::after {
+    bottom: 0;
+    -webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+
 /*
  * Мобильное меню
  */
+#accordion {
+    display: none;
+}
 
 .mobile-menu {
     position: absolute;
@@ -259,20 +357,18 @@ button img {
     border-bottom: 1px solid #d7d7d7;
 }
 
-
-
 .has-sub.first.open > a > div > span{
     color: #f45400;
 }
 
-.has-sub.first.open > a > .glyphicon {
+.has-sub.first.open > a > div > .glyphicon {
     transform: rotate(180deg);
-    transition: all 0.4s ease;
+    left: 10px;
 }
 
-.has-sub.open > a > div > .glyphicon {
-    transform: rotate(180deg);
-    transition: all 0.4s ease;
+.has-sub.open > a > .glyphicon {
+    transform: rotate(0.5turn);
+    left: 10px;
 }
 
 .submenu {
@@ -285,8 +381,9 @@ button img {
 
 }
 
-.submenu span {
-    color: #808080;
+.submenu span.glyphicon {
+    color: #b5b5b5;
+    font-size: 10px;
 }
 
 .mobile-menu .copyright {
