--- a/css/styles.css
+++ b/css/styles.css
@@ -401,6 +401,17 @@ button img {
 .mobile-menu .copyright span {
     color: #bebfbd;
 }
+
+.dark-bg.active {
+    background-color: rgba(0,0,0,0.7);
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 50px;
+    z-index: 1;
+}
+
+
 /*
  * Слайдер
  */
